fix: avoid clipping around SVG on mobile

--- a/site/_assets/css/style.css
+++ b/site/_assets/css/style.css
@@ -94,6 +94,10 @@ h2 {
   margin-block: 0;
 }
 
+svg {
+  overflow: visible; /* prevent clipping around edges */
+}
+
 svg,
 a {
   outline: none;
